# marketmind-ai-foundation

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py
app/api/: __init__.py
app/core/: config.py
app/data/: __init__.py  asset_data_requirements_evaluation.py  cross_source_validation_policy_evaluation.py  local_csv_batch_run.py  local_csv_ingestion.py  local_csv_quality_validation.py  managed_api_credentials.py  managed_api_fetch_preflight.py  managed_api_provider_access_verification_gate.py  managed_api_provider_documentation_evidence_gate.py  managed_api_runtime_credentials.py  quality_evaluation.py  quality_gate.py  source_evaluation.py  tiingo_eod_adapter.py  tiingo_eod_network_transport.py  tiingo_eod_response_parser.py  tiingo_provider_metadata_factory.py
app/domain/: __init__.py  asset_data_requirements.py  asset_data_requirements_evaluation.py  confidence_contract.py  confidence_parameters.py  cross_source_validation_policy.py  cross_source_validation_policy_evaluation.py  data_contract.py  data_ingestion_plan.py  data_ingestion_result.py  data_quality_result.py  data_source_contract.py  data_source_evaluation_contract.py  dataset_validation.py  feature_contract.py  ingested_daily_dataset.py  local_csv_batch_run.py  local_csv_contract.py  local_csv_quality_evidence_report.py  local_csv_quality_validation.py  managed_api_eod_record.py  (+15 more)
docs/: MULTI_ASSET_DATA_ACQUISITION_STRATEGY.md  PUBLIC_ROADMAP.md
scripts/: run_first_real_tiingo_spy_fetch.py
tests/: __init__.py
(+84 files in other folders)
