[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "marketmind-ai"
version = "0.1.0"
description = "Smart Money Intelligence Platform foundation."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
  "black>=24.0",
  "pytest>=8.0",
  "ruff>=0.6",
]

[tool.setuptools.packages.find]
include = ["app", "app.*"]
exclude = [
  "artifacts",
  "artifacts.*",
  "data",
  "data.*",
  "docs",
  "docs.*",
  "scripts",
  "scripts.*",
  "tests",
  "tests.*",
]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
src = ["app", "tests"]
target-version = "py311"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]
